Fix: Environment Variable bug

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_ACCESS_KEY = 0OkjcFuPSJZjSwGEuC9e8S7MI6p4YY8vgeSgY9Xa6D4
-REACT_APP_SECRET =
+VITE_REACT_APP_ACCESS_KEY = 0OkjcFuPSJZjSwGEuC9e8S7MI6p4YY8vgeSgY9Xa6D4
