--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,15 @@ lerna-debug.log*
 node_modules
 .env
 ./env
+.env.*.local
 dist
 dist-ssr
 *.local
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
