--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-scripts": "^5.0.1"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
@@ -25,7 +24,6 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
   }
